Code/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | LC DefList StmtList error

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | RETURN error SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | Exp error

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI

   40 DecList: Dec
   41        | Dec COMMA DecList

   42 Dec: VarDec
   43    | VarDec ASSIGNOP Exp

   44 Exp: Exp ASSIGNOP Exp
   45    | Exp AND Exp
   46    | Exp OR Exp
   47    | Exp RELOP Exp
   48    | Exp PLUS Exp
   49    | Exp MINUS Exp
   50    | Exp STAR Exp
   51    | Exp DIV Exp
   52    | LP Exp RP
   53    | MINUS Exp
   54    | NOT Exp
   55    | ID LP Args RP
   56    | ID LP error
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp LB error
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 19 26 32 36 56 59
INT (258) 18 62
FLOAT (259) 63
ID (260) 14 16 17 20 21 55 56 57 60 61
SEMI (261) 4 5 29 31 32 39
COMMA (262) 9 22 41 64
ASSIGNOP (263) 43 44
RELOP (264) 47
PLUS (265) 48
MINUS (266) 49 53
STAR (267) 50
DIV (268) 51
AND (269) 45
OR (270) 46
DOT (271) 60
NOT (272) 54
TYPE (273) 10
LP (274) 20 21 33 34 35 52 55 56 57
RP (275) 20 21 33 34 35 52 55 57
LB (276) 18 19 58 59
RB (277) 18 19 58
LC (278) 12 25 26
RC (279) 12 25
STRUCT (280) 12 13
RETURN (281) 31 32
IF (282) 33 34
ELSE (283) 34
WHILE (284) 35
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6 7, 右： 2
ExtDecList (35)
    左： 8 9, 右： 4 9
Specifier (36)
    左： 10 11, 右： 4 5 6 7 24 39
StructSpecifier (37)
    左： 12 13, 右： 11
OptTag (38)
    左： 14 15, 右： 12
Tag (39)
    左： 16, 右： 13
VarDec (40)
    左： 17 18 19, 右： 8 9 18 19 24 42 43
FunDec (41)
    左： 20 21, 右： 6
VarList (42)
    左： 22 23, 右： 20 22
ParamDec (43)
    左： 24, 右： 22 23
CompSt (44)
    左： 25 26, 右： 6 30
StmtList (45)
    左： 27 28, 右： 25 26 27
Stmt (46)
    左： 29 30 31 32 33 34 35 36, 右： 27 33 34 35
DefList (47)
    左： 37 38, 右： 12 25 26 37
Def (48)
    左： 39, 右： 37
DecList (49)
    左： 40 41, 右： 39 41
Dec (50)
    左： 42 43, 右： 40 41
Exp (51)
    左： 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63, 右： 29 31 33 34 35 36 43 44 45 46 47 48 49 50 51 52 53 54
    58 59 60 64 65
Args (52)
    左： 64 65, 右： 55 64


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  转到状态 16
    VarDec      转到状态 17
    FunDec      转到状态 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error .

    $default  reduce using rule 7 (ExtDef)


State 14

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 24

    CompSt  转到状态 25


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 26
    StructSpecifier  转到状态 7
    DefList          转到状态 27
    Def              转到状态 28


State 20

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 29
    STRUCT  shift, and go to state 2

    Specifier        转到状态 30
    StructSpecifier  转到状态 7
    VarList          转到状态 31
    ParamDec         转到状态 32


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  转到状态 34
    VarDec      转到状态 17


State 23

   18 VarDec: VarDec LB . INT RB
   19       | VarDec LB . error RB

    error  shift, and go to state 35
    INT    shift, and go to state 36


State 24

   25 CompSt: LC . DefList StmtList RC
   26       | LC . DefList StmtList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 26
    StructSpecifier  转到状态 7
    DefList          转到状态 37
    Def              转到状态 28


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   39 Def: Specifier . DecList SEMI

    ID  shift, and go to state 33

    VarDec   转到状态 38
    DecList  转到状态 39
    Dec      转到状态 40


State 27

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 41


State 28

   37 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        转到状态 26
    StructSpecifier  转到状态 7
    DefList          转到状态 42
    Def              转到状态 28


State 29

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 30

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  转到状态 43


State 31

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 44


State 32

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 23 (VarList)


State 33

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 34

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 35

   19 VarDec: VarDec LB error . RB

    RB  shift, and go to state 46


State 36

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 47


State 37

   25 CompSt: LC DefList . StmtList RC
   26       | LC DefList . StmtList error

    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 24
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    $default  reduce using rule 28 (StmtList)

    CompSt    转到状态 57
    StmtList  转到状态 58
    Stmt      转到状态 59
    Exp       转到状态 60


State 38

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   42 Dec: VarDec .
   43    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 61
    LB        shift, and go to state 23

    $default  reduce using rule 42 (Dec)


State 39

   39 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 62


State 40

   40 DecList: Dec .
   41        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 40 (DecList)


State 41

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 42

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 43

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 24 (ParamDec)


State 44

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 45

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 30
    StructSpecifier  转到状态 7
    VarList          转到状态 64
    ParamDec         转到状态 32


State 46

   19 VarDec: VarDec LB error RB .

    $default  reduce using rule 19 (VarDec)


State 47

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 48

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


State 49

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


State 50

   55 Exp: ID . LP Args RP
   56    | ID . LP error
   57    | ID . LP RP
   61    | ID .

    LP  shift, and go to state 65

    $default  reduce using rule 61 (Exp)


State 51

   53 Exp: MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 66


State 52

   54 Exp: NOT . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 67


State 53

   52 Exp: LP . Exp RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 68


State 54

   31 Stmt: RETURN . Exp SEMI
   32     | RETURN . error SEMI

    error  shift, and go to state 69
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 70


State 55

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 71


State 56

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 72


State 57

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 58

   25 CompSt: LC DefList StmtList . RC
   26       | LC DefList StmtList . error

    error  shift, and go to state 73
    RC     shift, and go to state 74


State 59

   27 StmtList: Stmt . StmtList

    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 24
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    $default  reduce using rule 28 (StmtList)

    CompSt    转到状态 57
    StmtList  转到状态 75
    Stmt      转到状态 59
    Exp       转到状态 60


State 60

   29 Stmt: Exp . SEMI
   36     | Exp . error
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . LB error
   60    | Exp . DOT ID

    error     shift, and go to state 76
    SEMI      shift, and go to state 77
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87


State 61

   43 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 88


State 62

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 63

   41 DecList: Dec COMMA . DecList

    ID  shift, and go to state 33

    VarDec   转到状态 38
    DecList  转到状态 89
    Dec      转到状态 40


State 64

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 65

   55 Exp: ID LP . Args RP
   56    | ID LP . error
   57    | ID LP . RP

    error  shift, and go to state 90
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 91

    Exp   转到状态 92
    Args  转到状态 93


State 66

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   53    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . LB error
   60    | Exp . DOT ID

    STAR  shift, and go to state 82
    DIV   shift, and go to state 83
    DOT   shift, and go to state 86
    LB    shift, and go to state 87

    $default  reduce using rule 53 (Exp)


State 67

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   54    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . LB error
   60    | Exp . DOT ID

    DOT  shift, and go to state 86
    LB   shift, and go to state 87

    $default  reduce using rule 54 (Exp)


State 68

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   52    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . LB error
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    RP        shift, and go to state 94
    LB        shift, and go to state 87


State 69

   32 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 95


State 70

   31 Stmt: RETURN Exp . SEMI
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . LB error
   60    | Exp . DOT ID

    SEMI      shift, and go to state 96
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87


State 71

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 97


State 72

   35 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 98


State 73

   26 CompSt: LC DefList StmtList error .

    $default  reduce using rule 26 (CompSt)


State 74

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 75

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 76

   36 Stmt: Exp error .

    $default  reduce using rule 36 (Stmt)


State 77

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 78

   44 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 99


State 79

   47 Exp: Exp RELOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 100


State 80

   48 Exp: Exp PLUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 101


State 81

   49 Exp: Exp MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 102


State 82

   50 Exp: Exp STAR . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 103


State 83

   51 Exp: Exp DIV . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 104


State 84

   45 Exp: Exp AND . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 105


State 85

   46 Exp: Exp OR . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 106


State 86

   60 Exp: Exp DOT . ID

    ID  shift, and go to state 107


State 87

   58 Exp: Exp LB . Exp RB
   59    | Exp LB . error

    error  shift, and go to state 108
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  转到状态 109


State 88

   43 Dec: VarDec ASSIGNOP Exp .
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . LB error
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87

    $default  reduce using rule 43 (Dec)


State 89

   41 DecList: Dec COMMA DecList .

    $default  reduce using rule 41 (DecList)


State 90

   56 Exp: ID LP error .

    $default  reduce using rule 56 (Exp)


State 91

   57 Exp: ID LP RP .

    $default  reduce using rule 57 (Exp)


State 92

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . LB error
   60    | Exp . DOT ID
   64 Args: Exp . COMMA Args
   65     | Exp .
